# MSL-Copilot-Human-In-The-Loop

./: README.md
MSL AI Intelligence/: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
MSL AI Intelligence/docs/: agent-blueprint.md  compliance_guardrails.md  data-sources.md  governance.md  methodology.md
MSL AI Intelligence/examples/: evidence_ledger_sample.json  nsclc_egfr_post_refine_request.json  nsclc_trial_opportunity.json  nsclc_trial_opportunity_brief.md
MSL AI Intelligence/outputs/: NSCLC_EGFR_Economics_Report_2026-06-19.md  NSCLC_EGFR_KOL_Trial_Narratives_2026-06-19.md  NSCLC_EGFR_Pre_vs_Post_Refine_Comparison_2026-06-19.md  NSCLC_EGFR_RnD_Report_2026-06-19.md  UK_NSCLC_Product_X_Customer_Strategy.pptx  post_refine_NSCLC_EGFR_Evidence_Ledger_2026-06-19.json  post_refine_NSCLC_EGFR_Trial_Opportunity_Brief_2026-06-19.md
MSL AI Intelligence/schemas/: opportunity.schema.json
MSL AI Intelligence/scripts/: install_skill.py  validate_skill.py
MSL AI Intelligence/skills/msl-ai-intelligence/: SKILL.md
MSL AI Intelligence/skills/msl-ai-intelligence/agents/: openai.yaml
MSL AI Intelligence/src/msl_agent/: __init__.py  cli.py  demo.py
MSL AI Intelligence/src/msl_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
MSL AI Intelligence/src/msl_ai_intelligence/: __init__.py  cli.py  example_data.py  scoring.py  templates.py
MSL AI Intelligence/tests/: __init__.py  _path.py  test_demo.py  test_evidence_ledger.py  test_hallucination_guardrails.py  test_nsclc_report_template.py  test_pipeline.py  test_scoring.py  test_templates.py
(+16 files in other folders)
